fix callouts invisible when printing

--- a/assets/obsidian-styles.css
+++ b/assets/obsidian-styles.css
@@ -1,3 +1,8 @@
+.callout
+{
+	mix-blend-mode: normal !important;
+}
+
 @media print 
 {
     
